added a version 2 and 3 of the razor pages for ProductsChat.

--- a/SemanticAgents/SemanticAgents/Components/Layout/KernelInfoDisplay.razor
+++ b/SemanticAgents/SemanticAgents/Components/Layout/KernelInfoDisplay.razor
@@ -3,22 +3,18 @@
 @using Microsoft.AspNetCore.Authorization
 @using SemanticAgents.Configuration
 
-@* <AuthorizeView>
-    <NotAuthorized>
-        <div class="d-flex align-items-center mx-5">
-    <h6 class="my-0 text-yellow"><i class="bi-cpu"></i>&nbsp; Model Provider: Please log in</h6>
-</div>
-    </NotAuthorized>
-    <Authorized>
-        <div class="d-flex align-items-center mx-5">
-    <h6 class="my-0 text-yellow"><i class="bi-cpu"></i>&nbsp; Model Provider: (@KernelInfo?.ModelProvider)</h6>
-</div>
-    </Authorized>
-</AuthorizeView> *@
-
 <div class="d-flex align-items-center mx-5">
-    <p class="my-0 text-yellow-alt text-sm-start"><i class="bi-lightning-charge-fill"></i><b><i>&nbsp; Model Provider: @KernelInfo?.ModelProvider</i></b></p>
-    @* lightbulb or lightbulb-fill magic*@
+    <p class="my-0 text-secondary-alt text-sm-start">
+        <i class="bi-lightning-charge-fill"></i>
+        @if (!string.IsNullOrWhiteSpace(KernelInfo?.LoadedModelId))
+        {
+            <b><i>&nbsp; LLM: @KernelInfo?.LoadedModelId &nbsp;  &nbsp;  Provider: @KernelInfo?.ModelProvider</i></b>
+        }
+        else
+        {
+            <b><i>&nbsp; LLM Provider: @KernelInfo?.ModelProvider</i></b>
+        }
+    </p>
 </div>
 
 @code {
