--- a/SemanticAgents/SemanticAgents/Components/Layout/NavMenu.razor
+++ b/SemanticAgents/SemanticAgents/Components/Layout/NavMenu.razor
@@ -83,25 +83,20 @@
                         <NavLink class="dropdown-item" href="openApi/productsChat" Match="NavLinkMatch.All">
                             <i class="bi-chat-text"></i> &nbsp; Products Chat
                         </NavLink>
-
+                        <NavLink class="dropdown-item" href="openApi/productsChatV2" Match="NavLinkMatch.All">
+                            <i class="bi-chat-text"></i> &nbsp; Products Chat V2
+                        </NavLink>
+                        <NavLink class="dropdown-item" href="openApi/productsChatV3" Match="NavLinkMatch.All">
+                            <i class="bi-chat-text"></i> &nbsp; Products Chat V3
+                        </NavLink>
                         @* <div class="dropdown-divider"></div> *@
                     </div>
                 </li>
 
-
-
-
-
-
-
-
-
-
             </ul>
-
             <div>
                 <div class="d-flex">
-                    <KernelInfoDisplay />
+                    @* <KernelInfoDisplay /> *@
                     <LoginDisplay />
                 </div>
             </div>
