--- a/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/RemoteModelConfiguration.razor
+++ b/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/RemoteModelConfiguration.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.Extensions.Options
+@using SemanticAgents.Client.Abstractions
 @using SemanticAgents.Client.Utility
 @using SemanticAgents.Configuration
 
@@ -26,15 +27,6 @@
 
 <hr />
 
-@* @if (!_loadingConfiguration)
-{
-    <div class="row mt-2">
-        <div class="col-12">
-            <h6 class="text-info-alt"><i>@_modelInfo</i></h6>
-        </div>
-    </div>
-} *@
-
 @if (_thinking)
 {
     <br />
@@ -51,48 +43,39 @@
     public string? ConfiguredModelProvider { get; set; }
     [Inject]
     public IOptions<SemanticKernelSettings>? _semanticKernelSettings { get; set; }
+    [Inject]
+    public IToastrService Toastr { get; set; } = default!;
 
     [Parameter]
-    public EventCallback<bool> ModelIsLoaded { get; set; }
+    public EventCallback<string> ModelIdLoadedCallback { get; set; }
 
     private bool _loadingConfiguration;
     private bool _thinking;
     private string? _errorMessage;
 
-    private string? _modelInfo;
-
     private string? _textModelId;
     private string? _imageModelId;
-
-    // private List<string>? _textModelList;
-    // private List<string>? _imageModelList;
-
-    private void UpdateModelInfo() => _modelInfo = $"Text Model: {_textModelId}, Image Model: {_imageModelId}";
 
     private async Task GetConfiguredProviderDefaults()
     {
         // for OpenAI and Grok - the local model is loaded by the user anyway so a list is not really relevant
         if (ConfiguredModelProvider == "Grok")
         {
-            // _textModelList = StaticData.Grok_TextModels;
-            // _imageModelList = StaticData.Grok_ImageModels;
             _textModelId = _semanticKernelSettings?.Value.Grok_TextModelId;
             _imageModelId = _semanticKernelSettings?.Value.Grok_ImageModelId;
         }
         else if (ConfiguredModelProvider == "OpenAI")
         {
-            // _textModelList = StaticData.OpenAI_TextModels;
-            // _imageModelList = StaticData.OpenAI_ImageModels;
             _textModelId = _semanticKernelSettings?.Value.OpenAI_TextModelId;
             _imageModelId = _semanticKernelSettings?.Value.OpenAI_ImageModelId;
         }
-        // _textModelId = _textModelList?.FirstOrDefault();
-        // _imageModelId = _imageModelList?.FirstOrDefault();
 
-        _modelInfo = $"Text Model: {_textModelId}, Image Model: {_imageModelId}";
+        await ModelIdLoadedCallback.InvokeAsync(_textModelId);
+
         _loadingConfiguration = false;
         _thinking = false;
-        @if (!string.IsNullOrWhiteSpace(_textModelId)) await ModelIsLoaded.InvokeAsync(true);
+
+        // await Toastr.ShowToastrSuccess($"Text Model {_textModelId} Loaded!");
     }
 
     protected override async Task OnInitializedAsync()
@@ -100,39 +83,5 @@
         _loadingConfiguration = true;
         _thinking = true;
         await GetConfiguredProviderDefaults();
-        // _chatService = _kernel.GetRequiredService<IChatCompletionService>();
-        // if (_kernelInfo is not null) _configuredModelProvider = _kernelInfo.ModelProvider;
     }
 }
-
-
-@* <div class="row mt-2">
-@if (_textModelList is not null && _textModelList.Any())
-{
-        <div class="col-2">
-            <h5>Select Text Model:</h5>
-        </div>
-        <div class="col-3">
-            <select class="bg-dark text-light form-select" @bind="_textModelId" @bind:after="UpdateModelInfo">
-                @foreach (var model in _textModelList)
-                {
-                    <option value="@model">@model</option>
-                }
-            </select>
-        </div>
-}
-    @if (_imageModelList is not null && _imageModelList.Any())
-    {
-        <div class="col-2 offset-1">
-            <h5>Select Image Model:</h5>
-        </div>
-        <div class="col-3">
-            <select class="bg-dark text-light form-select" @bind="_imageModelId" @bind:after="UpdateModelInfo">
-                @foreach (var model in _imageModelList)
-                {
-                    <option value="@model">@model</option>
-                }
-            </select>
-        </div>
-    }
-</div> *@
