Added another razor page ProductsChatV4 with better flow and more provider options.

--- a/SemanticAgents/SemanticAgents/Components/Layout/NavMenu.razor
+++ b/SemanticAgents/SemanticAgents/Components/Layout/NavMenu.razor
@@ -45,6 +45,9 @@
                         <NavLink class="dropdown-item" href="config/kernel" Match="NavLinkMatch.All">
                             <i class="bi-gear"></i> &nbsp; Kernel Configuration
                         </NavLink>
+                        <NavLink class="dropdown-item" href="config/kernelV2" Match="NavLinkMatch.All">
+                            <i class="bi-gear"></i> &nbsp; Kernel Configuration V2
+                        </NavLink>
                         <div class="dropdown-divider"></div>
                         <NavLink class="dropdown-item" href="config/server" Match="NavLinkMatch.All">
                             <i class="bi-gear"></i> &nbsp; Server Variables
@@ -88,6 +91,9 @@
                         </NavLink>
                         <NavLink class="dropdown-item" href="openApi/productsChatV3" Match="NavLinkMatch.All">
                             <i class="bi-chat-text"></i> &nbsp; Products Chat V3
+                        </NavLink>
+                        <NavLink class="dropdown-item" href="openApi/productsChatV4" Match="NavLinkMatch.All">
+                            <i class="bi-chat-text"></i> &nbsp; Products Chat V4
                         </NavLink>
                         @* <div class="dropdown-divider"></div> *@
                     </div>
