--- a/SemanticAgents/SemanticAgents/Components/_Imports.razor
+++ b/SemanticAgents/SemanticAgents/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using SemanticAgents.Components.Pages.Config.Components
 @using SemanticAgents.Components.Pages.Chat
 @using SemanticAgents.Components.Pages.Config.Modals
+@using SemanticAgents.Client.Utility
