--- a/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/RemoteModelConfiguration.razor
+++ b/SemanticAgents/SemanticAgents/Components/Pages/Config/Components/RemoteModelConfiguration.razor
@@ -61,13 +61,13 @@
         // for OpenAI and Grok - the local model is loaded by the user anyway so a list is not really relevant
         if (ConfiguredModelProvider == "Grok")
         {
-            _textModelId = _semanticKernelSettings?.Value.Grok_TextModelId;
-            _imageModelId = _semanticKernelSettings?.Value.Grok_ImageModelId;
+            _textModelId = StaticData.Grok_TextModel_Grok_2;                    // _semanticKernelSettings?.Value.Grok_TextModelId;
+            _imageModelId = StaticData.Grok_ImageModel_Grok_2_Image_1212;       // _semanticKernelSettings?.Value.Grok_ImageModelId;
         }
         else if (ConfiguredModelProvider == "OpenAI")
         {
-            _textModelId = _semanticKernelSettings?.Value.OpenAI_TextModelId;
-            _imageModelId = _semanticKernelSettings?.Value.OpenAI_ImageModelId;
+            _textModelId = StaticData.OpenAI_TextModel_gpt3_5_Turbo;    // _semanticKernelSettings?.Value.OpenAI_TextModelId;
+            _imageModelId = StaticData.OpenAI_ImageModel_dall_e_3;      //x _semanticKernelSettings?.Value.OpenAI_ImageModelId;
         }
 
         await ModelIdLoadedCallback.InvokeAsync(_textModelId);
